--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,117 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+ul{
+  padding: 0;
+  margin: 0;
+}
+li{
+  list-style: none;
+}
+body{
+  background-color: #fff;
+  font-family: 'Open Sans', sans-serif; height: 100vh; padding: 11px;
+}
+input{width: 100%; height: 40px;border: 0px; border-radius: 5px; padding: 11px;}
+/* width */
+::-webkit-scrollbar {
+  width: 3px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+  display: none;
 }
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #333; 
+  border-radius: 10px;
+  display: none;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #333; 
+  display: block;
+}
+
+
+.mainSection{
+  width: 100vw;
+  height: 100vh;background-color: #fff; position: relative; 
+}
+
+.formBox{width: 30vw; background-color: #dddddd; padding: 30px;}
+
+
+.label{width:100%; margin-bottom: 3px ;margin-top: 5px;}
+
+.selddwd{
+  width:"100%"!important
+}
+.error{color: red; font-size: 13px;}
+
+.selectDrop{width: 100%;}
+
+
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+.tableSection{padding:20px}
+
+.commonButton{width: 150px; background-color: black; height: 40px;border-radius: 5px;}
+.btnColor{color: #fff; line-height: 40px;}
+.flagImg{width: 50px;
+  height: 50px;}
+  .checkConditions{
+    display: flex;
+    /* justify-content: flex-start; */
+    align-items: center;
+    padding-top: 11px;
+  }
+
+  
+ .checkConditions   input[type=checkbox]{
+
+  width: 15px;
+  height: 15px;
+
+
+ }
+ .checkConditions  p{
+ margin: 0;
+ padding-left: 11px;}
+
+ .selectDrop{
+  border: 0;
+  width: 100%;
+  border-radius: 5px;
+  height: 40px;
+  
+
+ }
+ .selectDrop  .css-319lph-ValueContainer{
+   padding: 0px;
+ }
+
+ .selectDrop .css-1s2u09g-control{
+   height: 45px;
+ }
